@@ -15,9 +15,6 @@ Complatere l'update dei dati dell'utente dentro al wrapper per il database.
 Aggiungere il parsing di scelte multiple all'interno di un parametro nei dati del dipendente.
 Aggiungere il parsing del comando $.
 
-5.O.A
-Aggiungere disabilitazione di alcune funzionalità in base ai privilegi assegnati all'utente.
-
 6.O.A
 Aggiungere trace delle attivita' di ogni singolo utente una volta che fa il login.
 
@@ -27,6 +24,9 @@ IN PROGRESS TASK
 1.P.A
 Aggiungere un colore alla linea delle attività.
 Se queste sono ad una settimana dalla scadenza diventano rosse, mentre a tre arancioni.
+
+5.P.A
+Aggiungere disabilitazione di alcune funzionalità in base ai privilegi assegnati all'utente.
 
 
 CLOSED TASK
