@@ -1,5 +1,9 @@
 2014-10-23 Marco Giammarini <m.giammarini@warcomeb.it>
 
+    * Aggiunta la disabilitazione di alcune funzionalita' in base ai privilegi degli utenti.
+
+2014-10-23 Marco Giammarini <m.giammarini@warcomeb.it>
+
     * Ultimata la gestione del login, anche se ancora l'utente loggato non viene salvato  nel sistema.
 
 2014-10-20 Marco Giammarini <m.giammarini@warcomeb.it>
